--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -330,10 +330,10 @@
                                    <span class="fa fa-bed"></span>  проживание в  отеле  <span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> — (7 ночей);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    питание — завтраки;
+                                   <span class="fa fa-spoon"></span> питание — завтраки;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    переезд: аэропорт — отель — аэропорт (общественный транспорт);
+                                    переезд: аэропорт — отель — аэропорт (<span class="fa fa-bus"></span> общественный транспорт);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                   <span class="fa fa-ship"></span> морская прогулка по Босфору;
