--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -369,7 +369,7 @@
                                   входные билеты в музеи (факультатив);
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
-                                  преблизительно с собой желательно иметь от 200$ на расходы.
+                                  приблизительно с собой желательно иметь от 200$ на расходы.
                                 </li>
                                 <ul>
                         </div>
