--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -138,7 +138,7 @@
                         <!-- //Alert info -->
                         <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>250 Евро</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>7 Дней</span></li>
                         </ul>
                         <br>
                         <p>
