--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -333,7 +333,7 @@
                                    <span class="fa fa-spoon"></span> питание — завтраки;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    переезд: аэропорт — отель — аэропорт (<span class="fa fa-bus"></span> общественный транспорт);
+                                    переезд: аэропорт — отель — аэропорт (общественный транспорт);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                   <span class="fa fa-ship"></span> морская прогулка по Босфору;
