--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -211,7 +211,7 @@
                                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-                                         <h4>Стамбул разнообразен и притягателен…</h4>
+                                         <h5>Стамбул разнообразен и притягателен</h5>
                                         <p>
                                           Город кебабов и рахат-лукума, ароматного кофе и жаренных каштанов, восточных базаров и потрясающих мечетей. Стамбул — это мост между Европой и Азией, между традиционным Востоком и современным Западом.
                                         </p> 
