--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -119,7 +119,7 @@
                         <!-- Alert warning -->
                         <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <span class="fa fa-info-circle" ></span><h4 class="alert-heading"><strong> Информация!</strong></h4><br/>
+                            <span class="fa fa-info-circle" ></span><strong> Информация!</strong><br/>
                             <span class="txt-alg-jf">
                                 Бронируйте уже сейчас, места в группе ограничены, так-же как и авиа билеты! 
                                 Предоплата 825 Грн. за 7 дней.
