--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -119,7 +119,7 @@
                         <!-- Alert warning -->
                         <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <span class="fa fa-info-circle" ></span><strong> Информация!</strong><br/>
+                            <span class="fa fa-thumb-tack" ></span><strong> Напоминаем!</strong><br/>
                             <span class="txt-alg-jf">
                                 Бронируйте уже сейчас, места в группе ограничены, так-же как и авиа билеты! 
                                 Предоплата 825 Грн. за 7 дней.
@@ -330,7 +330,7 @@
                                    <span class="fa fa-bed"></span>  проживание в  отеле  <span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> — (7 ночей);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   <span class="fa fa-spoon"></span> питание — завтраки;
+                                   <span class="fa fa-cutlery"></span> питание — завтраки;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     переезд: аэропорт — отель — аэропорт (общественный транспорт);
