--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                     <h4 class="destination mb-3">Лимонарий</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                            <img src="images/Limonariy-mini.jpg" class="img-fluid" alt="Лимонарий">
+                            <img src="images/Limonariy-max.jpg" class="img-fluid" alt="Лимонарий">
                         </a>
                         <div class="rating">
                             <ul>
