--- a/booking.html
+++ b/booking.html
@@ -121,6 +121,7 @@
                                     <option>Хортица</option>
                                     <option>Карпаты</option>
                                     <option>Букет К 8 Марта</option>
+                                    <option>Стамбул Столица Тюльпанов</option>
                                 </select>
                             </div>
                             <div class="col-md-12 form-group contact-forms">
