--- a/booking.html
+++ b/booking.html
@@ -5,7 +5,7 @@
     <title>Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="туры выходного дня 'Новый поворот'" />
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
 
     <script>
         addEventListener("load", function () {
