--- a/page-LOL.html
+++ b/page-LOL.html
@@ -7,7 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
-
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Праздник в стиле Лол!">
+    <meta property="og:description" content="Праздник в стиле Лол! Игры и танцы, роспись пряников с любимыми персонажами!"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Stambul.html"/>
+    <meta property="og:image" content="images/lol-max.jpg">
+    <!--End Open Graph data-->
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
