--- a/page-Beer.html
+++ b/page-Beer.html
@@ -3,10 +3,18 @@
 <html lang="ru">
 
 <head>
-    <title>Пиво | Новый поворот</title>
+    <title>Пиво | Новый поворот | Экскурсия и дегустация в частную пивоварню </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Экскурсия и дегустация в частную пивоварню, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Экскурсия и дегустация в частную пивоварню, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Пиво">
+    <meta property="og:description" content="Экскурсия и дегустация в частную пивоварню!"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Stambul.html"/>
+    <meta property="og:image" content="images/lol-max.jpg">
+    <!--End Open Graph data-->
 
     <script>
         addEventListener("load", function () {
