--- a/page-Beer.html
+++ b/page-Beer.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Экскурсия и дегустация в частную пивоварню!"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Stambul.html"/>
-    <meta property="og:image" content="images/lol-max.jpg">
+    <meta property="og:image" content="images/beer-max.jpg">
     <!--End Open Graph data-->
 
     <script>
