--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Тайны и загадки острова, Хортица Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
     <!-- Open Graph data-->
     <meta property="og:title" content="Хортица">
-    <meta property="og:description" content="Тайны и загадки острова!"/>
+    <meta property="og:description" content="Тайны и загадки острова. Удивительный и таинственный! Такой родной и привычный для жителей Запорожья остров."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Stambul.html"/>
     <meta property="og:image" content="images/hortica-max.jpg">
