--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -3,10 +3,18 @@
 <html lang="ru">
 
 <head>
-    <title>Карпаты | Новый поворот</title>
+    <title>Карпаты | Новый поворот | Походы в Карпаты</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Походы в Карпаты, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Походы в Карпаты, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Карпаты">
+    <meta property="og:description" content="Походы в Карпаты. Расписание походов..."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Karpati.html"/>
+    <meta property="og:image" content="images/karpati-max.jpg">
+    <!--End Open Graph data-->
 
     <script>
         addEventListener("load", function () {
