--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -2,10 +2,18 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<title>Полтава | Новый поворот</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta charset="utf-8">
-<meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
+<title>Полтава | Новый поворот | Лыжные покатухи и колоритный хутор в Полтаве</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Лыжные покатухи и колоритный хутор в Полтаве, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Лыжные покатухи и колоритный хутор в Полтаве, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Полтава">
+    <meta property="og:description" content="Лыжные покатухи и колоритный хутор в Полтаве..."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Poltava.html"/>
+    <meta property="og:image" content="images/Poltava-max.jpg">
+    <!--End Open Graph data-->
 
     <script>
         addEventListener("load", function () {
