--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Туры выходного дня 'Новый поворот', Стамбул - столица тюльпанов, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Стамбул - столица тюльпанов, Стамбул_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
     <!-- Open Graph data-->
-    <meta property="og:title" content="Стамбул">
-    <meta property="og:description" content="Стамбул - столица тюльпанов!"/>
+    <meta property="og:title" content="Стамбул - столица тюльпанов!">
+    <meta property="og:description" content="В апреле Стамбул превращается в цветочный шедевр и становится тюльпановой столицей мира! "/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Stambul.html"/>
     <meta property="og:image" content="images/Stambul-max.jpg">
