--- a/page-Turkey.html
+++ b/page-Turkey.html
@@ -3,10 +3,18 @@
 <html lang="ru">
 
 <head>
-    <title>Турция | Новый поворот</title>
+    <title>Турция | Новый поворот | Походы по Турции</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Походы по Турции, расписание походов, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Походы по Турции, расписание походов, Стамбул_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Походы по Турции">
+    <meta property="og:description" content="Расписание походов..."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Turkey.html"/>
+    <meta property="og:image" content="images/Turkey-max.jpg">
+    <!--End Open Graph data-->
 
     <script>
         addEventListener("load", function () {
