--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -3,17 +3,19 @@
 <html lang="ru">
 
 <head>
-    <title>Лимонарий | Новый поворот</title>
+    <title>Лимонарий | Новый поворот | Экскурсия в Лимонный сад</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Лимонарий, Экскурсия в Лимонный сад, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Лимонарий, Экскурсия в Лимонный сад, Стамбул_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
     <!-- Open Graph data-->
-    <meta property="og:title" content="Лимонарий. Экскурсия в Лимонный сад">
-    <meta property="og:description" content=" Яркие сочные лимончики висящие на ветках интересно, экзотично и необычно..."/>
+    <meta property="og:title" content="Лимонарий ">
+    <meta property="og:description" content="Яркие сочные лимончики висящие на ветках интересно, экзотично и необычно..."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Limonariy.html"/>
     <meta property="og:image" content="images/Limonariy-max.jpg">
     <!--End Open Graph data-->
+
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
