--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -3,11 +3,18 @@
 <html lang="ru">
 
 <head>
-    <title>Букет 8 марта| Новый поворот</title>
+<title>Букет к 8 марта | Новый поворот | Вкусный мастер класс по созданию Сладкого букета</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
-    <meta name="description" content="Туры выходного дня, 0985771579, 0506702264, dovgalyv@ukr.net. Путешествуйте с улыбкой! Экскурсии Запорожье | Букет из Маршмеллоу | Сладкий букет | Мастер класс сладкий букет | экскурсии выходного дня | афиша Запорожье | как провести выходные | незабываемый отдых | экскурсии из Запорожья">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Вкусный мастер класс по созданию Сладкого букета, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Вкусный мастер класс по созданию Сладкого букета, 8_марта_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Букет к 8 марта">
+    <meta property="og:description" content="Вкусный мастер класс по созданию Сладкого букета..."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-eight-march.html"/>
+    <meta property="og:image" content="images/eight-march-max.jpg">
+    <!--End Open Graph data-->
 
     <script>
         addEventListener("load", function () {
