--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h1 class="mt-md-0 mt-2"> <a href="index.html"><span class="fa fa-map-signs"></span> Новый поворот
                         </a></h1>
                 </div>
-                <label for="drop" class="toggle"><span class="fa fa-bars"></i></label>
+                <label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
                 <input type="checkbox" id="drop" />
                 <ul class="menu ml-auto mt-1">
                     <li class="active"><a href="index.html">Главная</a></li>
