--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <div class="col-lg-4 col-sm-6 mt-lg-0 mt-5">
                     <div class="grid-info">
                         <div class="icon">
-                            <span class="fa fa-gift"></i>
+                            <span class="fa fa-gift"></span>
                         </div>
                         <h4>НАСЛАЖДАЙТЕСЬ ПОЕЗДКОЙ</h4>
                         <p class="mt-3"></p>
