--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 
 <head>
-    <title>Новый поворот</title>
+    <title>Новый поворот | Туры выходного дня | Экскурсии из Запорожье | Путишевствия</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
-     <meta name="description" content="Туры выходного дня,  0985771579, 0506702264, dovgalyv@ukr.net. Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+     <meta name="description" content="Туры выходного дня  'Новый поворот', тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
