--- a/page-Beer.html
+++ b/page-Beer.html
@@ -130,6 +130,7 @@
                                     href="https://novipovorot.pp.ua/booking.html">Забронировать</a> </button>
 
                             <!-- liq pay -->
+                           <!--
                             <form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
                                 <input type="hidden" name="data"
                                     value="eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=" />
@@ -143,6 +144,7 @@
                                     <span style="vertical-align:middle; !important">Оплатить</span>
                                 </button>
                             </form>
+                             -->
                             <!-- liq pay -->
                         </div>
                         <p>
@@ -254,7 +256,7 @@
                                 <ul>
                         </div>
 			<!-- liq pay -->
-			<div id="liqpay_checkout"></div>
+			<!--<div id="liqpay_checkout"></div>-->
                     </div>
                 </div>
             </div>
@@ -264,28 +266,7 @@
     </section>
     <!--//single page-->
 
-    <!-- liq pay -->
-
-    <script>
-        window.LiqPayCheckoutCallback = function () {
-            LiqPayCheckout.init({
-                data: "eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=",
-                signature: "4+42EF/w3QRoK5hOJqe+N3dSS/0=",
-                embedTo: "#liqpay_checkout",
-                mode: "embed" // embed || popup,
-            }).on("liqpay.callback", function (data) {
-                console.log(data.status);
-                console.log(data);
-            }).on("liqpay.ready", function (data) {
-                // ready
-            }).on("liqpay.close", function (data) {
-                // close
-            });
-        };
-    </script>
-    <script src="//static.liqpay.ua/libjs/checkout.js" async></script>
-
-    <!-- liq pay -->
+ 
 
     <!--footer -->
     <footer>
