--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -129,7 +129,7 @@
                                     href="https://novipovorot.pp.ua/booking.html">Забронировать</a> </button>
 
                             <!-- liq pay -->
-                            <form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
+                          <!--  <form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
                                 <input type="hidden" name="data"
                                     value="eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=" />
                                 <input type="hidden" name="signature" value="4+42EF/w3QRoK5hOJqe+N3dSS/0=" />
@@ -141,7 +141,7 @@
                                         style="margin-right: 7px !important; vertical-align: middle !important;" />
                                     <span style="vertical-align:middle; !important">Оплатить</span>
                                 </button>
-                            </form>
+                            </form>-->
                             <!-- liq pay -->
 
                         </div>
@@ -255,7 +255,7 @@
                                 <ul>
                         </div>
 			<!-- liq pay -->	    
-			<div id="liqpay_checkout"></div>
+		<!--<div id="liqpay_checkout"></div>-->
                     </div>
                 </div>
             </div>
@@ -265,28 +265,7 @@
     </section>
     <!--//single page-->
 
-    <!-- liq pay -->
-    <script>
-        window.LiqPayCheckoutCallback = function () {
-            LiqPayCheckout.init({
-                data: "eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=",
-                signature: "4+42EF/w3QRoK5hOJqe+N3dSS/0=",
-                embedTo: "#liqpay_checkout",
-                mode: "embed" // embed || popup,
-            }).on("liqpay.callback", function (data) {
-                console.log(data.status);
-                console.log(data);
-            }).on("liqpay.ready", function (data) {
-                // ready
-            }).on("liqpay.close", function (data) {
-                // close
-            });
-        };
-    </script>
-    <script src="//static.liqpay.ua/libjs/checkout.js" async></script>
-
-    <!-- liq pay -->
-
+    
     <!--footer -->
     <footer>
         <section class="footer footer_w3layouts_section_1its py-5">
