--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -125,21 +125,6 @@
                             <button type="button" class="btn btn-outline-primary mr-3"> <a
                                     href="https://novipovorot.pp.ua/booking.html">Забронировать</a> </button>
 
-                            <!-- liq pay -->
-                            <form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
-                                <input type="hidden" name="data"
-                                    value="eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=" />
-                                <input type="hidden" name="signature" value="4+42EF/w3QRoK5hOJqe+N3dSS/0=" />
-                                <button style="border: none !important; display:inline-block !important;text-align: center !important;padding: 7px 20px !important;
-	    color: #fff !important; font-size:16px !important; font-weight: 600 !important; font-family:OpenSans, sans-serif; cursor: pointer !important; border-radius: 2px !important;
-	    background: rgba(122,183,43,1) !important;" onmouseover="this.style.opacity='0.5';"
-                                    onmouseout="this.style.opacity='1';">
-                                    <img src="https://static.liqpay.ua/buttons/logo-small.png" name="btn_text"
-                                        style="margin-right: 7px !important; vertical-align: middle !important;" />
-                                    <span style="vertical-align:middle;">Оплатить</span>
-                                </button>
-                            </form>
-                            <!-- liq pay -->
                         </div>
                         <p>
                             Присоединяйтесь к сообществу в социальных сетях:
@@ -245,7 +230,7 @@
                                 </li>
                                 <ul>
                         </div>
-                       <div id="liqpay_checkout"></div>
+                      <!-- <div id="liqpay_checkout"></div>-->
                     </div>
                 </div>
             </div>
@@ -255,27 +240,6 @@
     </section>
     <!--//single page-->
 
-    <!-- liq pay -->
-    
-    <script>
-        window.LiqPayCheckoutCallback = function () {
-            LiqPayCheckout.init({
-                data: "eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ItCt0LrRgdC60YPRgNGB0LjRjyIsInB1YmxpY19rZXkiOiJpNzQ2NTQ4MzU1NTIiLCJsYW5ndWFnZSI6InJ1In0=",
-                signature: "4+42EF/w3QRoK5hOJqe+N3dSS/0=",
-                embedTo: "#liqpay_checkout",
-                mode: "embed" // embed || popup,
-            }).on("liqpay.callback", function (data) {
-                console.log(data.status);
-                console.log(data);
-            }).on("liqpay.ready", function (data) {
-                // ready
-            }).on("liqpay.close", function (data) {
-                // close
-            });
-        };
-    </script>
-    <script src="//static.liqpay.ua/libjs/checkout.js" async></script>
-    <!-- liq pay -->
     
     <!--footer -->
     <footer>
