--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -133,8 +133,8 @@
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-info-circle" ></span><strong> Информация!</strong><br/>
                             <span class="txt-alg-jf">
-                                <span class="fa fa-plane"></span>  Вылет из Запорожья <strong>20 апреля в 14:45.</strong> Прилет в Стамбул в <strong>16:40.</strong><br>
-                                <span class="fa fa-plane"></span>  Вылет из Стамбула <strong>27 апреля в 11:50.</strong> Прилет в Запорожье в <strong>13:50.</strong>
+                               <!-- <span class="fa fa-plane"></span> --> Вылет из Запорожья <strong>20 апреля в 14:45.</strong> Прилет в Стамбул в <strong>16:40.</strong><br>
+                               <!-- <span class="fa fa-plane"></span> --> Вылет из Стамбула <strong>27 апреля в 11:50.</strong> Прилет в Запорожье в <strong>13:50.</strong>
                             </span>
                         </div>
                         <!-- //Alert info -->
@@ -315,22 +315,22 @@
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
-                                   <span class="fa fa-bed"></span>  проживание в  отеле  <span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> — (7 ночей);
+                                 <!--<span class="fa fa-bed"></span> --> проживание в  отеле  <span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> — (7 ночей);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   <span class="fa fa-cutlery"></span> питание — завтраки;
+                                  <!-- <span class="fa fa-cutlery"></span> -->питание — завтраки;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     переезд: аэропорт — отель — аэропорт (общественный транспорт);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                  <span class="fa fa-ship"></span> морская прогулка по Босфору;
+                                 <!-- <span class="fa fa-ship"></span>--> морская прогулка по Босфору;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                  <span class="fa fa-ship"></span>  морская прогулка на Принцевы острова;
+                                 <!-- <span class="fa fa-ship"></span> --> морская прогулка на Принцевы острова;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   <span class="fa fa-ship"></span> проезд на пароме по Золотому Рогу;
+                                  <!-- <span class="fa fa-ship"></span> -->проезд на пароме по Золотому Рогу;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     посещение цистерны Базилики;
@@ -339,7 +339,7 @@
                                     посещение центрального парка Стамбула Эмирган;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   <span class="fa fa-bus"></span> проезд на общественном транспорте с учетом всей программы поездки;
+                                  <!-- <span class="fa fa-bus"></span>--> проезд на общественном транспорте с учетом всей программы поездки;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     сопровождение организаторов.
@@ -351,7 +351,7 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    <span class="fa fa-plane"></span> авиа перелет ;
+                                   <!-- <span class="fa fa-plane"></span> -->авиа перелет ;
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
                                   входные билеты в музеи (факультатив);
