--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -315,7 +315,7 @@
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
-                                 <!--<span class="fa fa-bed"></span> --> проживание в  отеле  <span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> — (7 ночей);
+                                 <!--<span class="fa fa-bed"></span> --> проживание в  отеле  <span class="fa fa-star-o"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> — (7 ночей);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                   <!-- <span class="fa fa-cutlery"></span> -->питание — завтраки;
