--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Яркие сочные лимончики висящие на ветках интересно, экзотично и необычно..."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Limonariy.html"/>
-    <meta property="og:image" content="images/Limonariy-max.jpg">
+    <meta property="og:image" content="images/Limonariy-og.jpg">
     <!--End Open Graph data-->
 
     <script>
