--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <title>Новый поворот | Туры выходного дня из Запорожья | Экскурсии из Запорожье | Путешевствия</title>
+    <title>Новый поворот | Туры выходного дня | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
