--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
-    <meta name="description" content="Туры выходного дня 'Новый поворот', тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net Путешествуйте с улыбкой! Экскурсии Запорожье | Экскурсии выходного дня | Туры выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="description" content="Туры выходного дня 'Новый поворот' | тел.: +380985771579, +380506702264, почта: dovgalyv@ukr.net | Сделаем Вашу жизнь ярче и разнообразнее. Путешествуйте с улыбкой! ">
     
     <!-- Open Graph data-->
     <meta property="og:title" content="Туры выходного дня 'Новый поворот'">
-    <meta property="og:description" content=" Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! "/>
+    <meta property="og:description" content="Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! "/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/index.html"/>
     <meta property="og:image" content="images/novi-povorot.jpg">
