--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
-    <meta name="description" content="Туры выходного дня 'Новый поворот' | тел.: +380985771579, +380506702264, почта: dovgalyv@ukr.net | Сделаем Вашу жизнь ярче и разнообразнее. Путешествуйте с улыбкой! ">
+    <meta name="description" content="Туры выходного дня 'Новый поворот' | тел.: +380985771579, +380506702264, почта: dovgalyv@ukr.net | Сделаем Вашу жизнь ярче. Путешествуйте с улыбкой! ">
     
     <!-- Open Graph data-->
     <meta property="og:title" content="Туры выходного дня 'Новый поворот'">
