--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Туры выходного дня из Запорожья - Новый Поворот | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
-    <meta name="description" content="Туры выходного дня 'Новый поворот' | тел.: +380985771579, +380506702264, почта: dovgalyv@ukr.net | Сделаем Вашу жизнь ярче. Путешествуйте с улыбкой! ">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', экскурсии, путешевствия, походы, мастер-классы, дегустации" />
+    <meta name="description" content="Туры выходного дня 'Новый поворот' | тел.: +380985771579, +380506702264, почта: dovgalyv@ukr.net | Сделаем Вашу жизнь ярче | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
     
     <!-- Open Graph data-->
     <meta property="og:title" content="Туры выходного дня 'Новый поворот'">
@@ -25,19 +25,22 @@
             window.scrollTo(0, 1);
         }
     </script>
+
     <!--favicon.ico-->
     <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
     <!--//favicon.ico-->
+
     <!-- css files -->
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
-    <!--<link href="css/font-awesome.min.css" rel="stylesheet">-->
     <!-- fontawesome css -->
     <!-- //css files -->
+
     <!-- aos.css files -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- //aos.css files -->
+
     <link href="css/css_slider.css" type="text/css" rel="stylesheet" media="all">
 
     <!-- google fonts -->
