--- a/contact.html
+++ b/contact.html
@@ -134,12 +134,12 @@
             <div class="contact-grids mt-5">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 contact-left-form">
-                        <form action="#" method="post">
+                        <form action="https://formspree.io/f/xaylkzre" method="post">
                             <div class=" form-group contact-forms">
-                                <input type="text" class="form-control" placeholder="Имя" required="">
+                                <input type="text" name="Имя" class="form-control" placeholder="Имя" required="">
                             </div>
                             <div class="form-group contact-forms">
-                                <input type="email" class="form-control" placeholder="Эл.почта" required="">
+                                <input type="email" name="Электронная почта" class="form-control" placeholder="Эл.почта" required="">
                             </div>
                             <div class="form-group contact-forms">
                                 <input type="text" class="form-control" placeholder="Телефон" required="">
