--- a/contact.html
+++ b/contact.html
@@ -142,10 +142,10 @@
                                 <input type="email" name="Электронная почта" class="form-control" placeholder="Эл.почта" required="">
                             </div>
                             <div class="form-group contact-forms">
-                                <input type="text" class="form-control" placeholder="Телефон" required="">
+                                <input type="text" name="Телефон" class="form-control" placeholder="Телефон" required="">
                             </div>
                             <div class="form-group contact-forms">
-                                <textarea class="form-control" placeholder="Сообщение" rows="3" required=""></textarea>
+                                <textarea name="Сообщение"  class="form-control" placeholder="Сообщение" rows="3" required=""></textarea>
                             </div>
                             <button class="btn btn-block sent-butnn">Отправить</button>
                         </form>
