--- a/booking.html
+++ b/booking.html
@@ -51,7 +51,7 @@
                 <input type="checkbox" id="drop" />
                 <ul class="menu ml-auto mt-1">
                     <li class=""><a href="index.html">Главная</a></li>
-                    <li class=""><a href="about.html"> О Нас </a></li>
+                    <li class=""><a href="about.html"> Отзывы </a></li>
                     <li class=""><a href="packages.html">Туры</a></li>
                     <li class=""><a href="contact.html">Контакты</a></li>
                     <li class="booking"><a href="booking.html">Забронировать</a></li>
