--- a/packages.html
+++ b/packages.html
@@ -302,7 +302,7 @@
                     <h4 class="destination mb-3">Лимонарий</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                            <img src="images/2021 Лим 2550 на 2910.jpg" class="img-fluid" alt="">
+                            <img src="images/Limonariy-max.jpg" class="img-fluid" alt="">
                         </a>
                         <div class="rating">
                             <ul>
