--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
             <h3 class="heading text-capitalize text-center mb-lg-5 mb-4" data-aos="zoom-in">Что Говорят Наши Клиенты
             </h3>
             <div class="row pt-xl-4">
-                <div id="wpac-review" style="width:90%; margin: 0 auto;"></div>
+               <!-- <div id="wpac-review" style="width:90%; margin: 0 auto;"></div>-->
             </div>
         </div>
     </section>
@@ -314,7 +314,7 @@
 
         });
     </script>
-
+<!--
     <script type="text/javascript">
     wpac_init = window.wpac_init || [];
     wpac_init.push({widget: 'Review', id: 29257});
@@ -328,7 +328,7 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(mc, s.nextSibling);
     })();
     </script>
-
+-->
 </body>
 
 </html>
