--- a/about.html
+++ b/about.html
@@ -7,6 +7,14 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
 
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Туры выходного дня 'Новый поворот' | Отзывы">
+    <meta property="og:description" content="Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! "/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/about.html"/>
+    <meta property="og:image" content="images/novi-povorot.jpg">
+    <!--End Open Graph data-->
+
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
