--- a/page-Odessa-on-march-eight.html
+++ b/page-Odessa-on-march-eight.html
@@ -1,4 +1,48 @@
+<!-- Odessa -->
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<title>Одесса | Новый поворот | Одесса на 8 марта. Морской привет!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Лыжные покатухи и колоритный хутор в Полтаве, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Лыжные покатухи и колоритный хутор в Полтаве, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Полтава">
+    <meta property="og:description" content="Лыжные покатухи и колоритный хутор в Полтаве..."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Poltava.html"/>
+    <meta property="og:image" content="images/Poltava-max.jpg">
+    <!--End Open Graph data-->
 
+    <script>
+        addEventListener("load", function () {
+            setTimeout(hideURLbar, 0);
+        }, false);
+
+        function hideURLbar() {
+            window.scrollTo(0, 1);
+        }
+    </script>
+	
+        <!--favicon.ico-->
+    <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
+	<!--//favicon.ico-->
+	<!-- css files -->
+    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
+    <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
+    <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
+	<!-- //css files -->
+	
+	<!-- google fonts -->
+	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+	<!-- //google fonts -->
+	 
+</head>
+<body>
+
+<!-- header -->
 
 
 
