--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -5,14 +5,14 @@
 <title>Одесса | Новый поворот | Одесса на 8 марта. Морской привет!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Лыжные покатухи и колоритный хутор в Полтаве, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
-    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Лыжные покатухи и колоритный хутор в Полтаве, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Одесса на 8 марта. Морской привет! тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Одесса на 8 марта. Морской привет! Туры выходного дня_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
     <!-- Open Graph data-->
-    <meta property="og:title" content="Полтава">
-    <meta property="og:description" content="Лыжные покатухи и колоритный хутор в Полтаве..."/>
+    <meta property="og:title" content="Одесса">
+    <meta property="og:description" content="Одесса на 8 марта. Морской привет!"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://novipovorot.pp.ua/page-Poltava.html"/>
-    <meta property="og:image" content="images/Poltava-max.jpg">
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Odessa-on-march.html"/>
+    <meta property="og:image" content="images/Odessa-max.jpg">
     <!--End Open Graph data-->
 
     <script>
@@ -78,10 +78,10 @@
       <div class="row">
 
         <div class="col-lg-4 main-title-text">
-          <h3 class="title">Полтава</h3>
+          <h3 class="title">Одесса</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
-          <img src="images/Poltava-max.jpg" alt="news image" class="img-fluid">
+          <img src="images/Odessa-max.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
             <div class="blog-date-time mb-2">
               <ul class="listing mt-3">
