--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -86,19 +86,26 @@
             <div class="blog-date-time mb-2">
               <ul class="listing mt-3">
                 <li>
-                  <span class="fa fa-calendar mr-2"></span>Дата: <span>13-14 Февраля 2021 Года</span>
+                  <span class="fa fa-calendar mr-2"></span>Дата: <span>5-9 марта 2021 Года</span>
                 </li>
               </ul>
             </div>
             <h4 class="mb-3">
-              Лыжные покатухи и колоритный хутор в Полтаве
+              Одесса на 8 марта. Морской привет!
             </h4>
             <p class="txt-alg-jf">
-              Колоритный Полтавский хутор с национальной едой и банькой, покатухи на лыжах, коньках и сноубордах в самом продвинутом горонолыжном комплексе с собственными снежными пушками. Экскурсия по Полтаве и просто душевный отдых! 
+              Прекрасное море, старинные улочки Одессы,
+              этот неподражаемый юмор и колорит! Весна наступает,
+              пора в путешествие!
+
+предоплата 1100 грн. 3 дня в Одессе!
+Бронируйте уже сейчас, места в группе ограничены!
+
+
             </p>
             <hr>
             <ul class="listing">
-		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>1700 Грн.</span></li> 
+		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>2100 Грн.</span></li> 
 		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
 	     </ul>
             <br>
