--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -104,6 +104,16 @@
 
             </p>
             <hr>
+            <!-- Alert warning -->
+                        <div class="alert alert-warning mt-3 ">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                            <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
+                            <span class="txt-alg-jf">В стоимость входит 1 кг лимонов с собой.
+                                180 грн 0-12 лет (в стоимость входит 0.5 кг
+                                лимонов с собой), цена для семей от 2 человек
+                                с детьми, стоимость указана за 1 человека.</span>
+                        </div>
+                        <!-- //Alert warning -->
             <ul class="listing">
 		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>2100 Грн.</span></li> 
 		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
