--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -97,21 +97,16 @@
               Прекрасное море, старинные улочки Одессы,
               этот неподражаемый юмор и колорит! Весна наступает,
               пора в путешествие!
-
-предоплата 1100 грн. 3 дня в Одессе!
-Бронируйте уже сейчас, места в группе ограничены!
-
-
             </p>
             <hr>
             <!-- Alert warning -->
                         <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
-                            <span class="txt-alg-jf">В стоимость входит 1 кг лимонов с собой.
-                                180 грн 0-12 лет (в стоимость входит 0.5 кг
-                                лимонов с собой), цена для семей от 2 человек
-                                с детьми, стоимость указана за 1 человека.</span>
+                            <span class="txt-alg-jf">
+                               Предоплата 1100 грн. 3 дня в Одессе!
+                               Бронируйте уже сейчас, места в группе ограничены!
+                                </span>
                         </div>
                         <!-- //Alert warning -->
             <ul class="listing">
