--- a/index.html
+++ b/index.html
@@ -319,24 +319,24 @@
                 </div>
                 <!--  //Турция  -->
 
-                <!--  Полтава  -->
+                <!--  Одесса  -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Poltava.html">
-                            <img src="images/Poltava-mini.jpg" alt="" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
+                            <img src="images/Odessa-mini.jpg" alt="" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>1700грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>2100грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Полтава, Украина.</h6>
-                        <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Poltava.html">Полтава</a></h5>
-                        <p class="">Лыжные покатухи и колоритный хутор с Новым поворотом </p>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесса, Украина.</h6>
+                        <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
+                        <p class="">Одесса на 8 марта. Морской привет!</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Полтава  -->
+                <!--  //Одесса  -->
 
                 <!--  Лимонарий  -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
@@ -418,10 +418,10 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Полтава</h4>
+                    <h4 class="destination mb-3">Одесса</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Poltava.html">
-                            <img src="images/Poltava-max.jpg" class="img-fluid" alt="Полтава">
+                        <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
+                            <img src="images/Odessa-max.jpg" class="img-fluid" alt="Одесса">
                         </a>
                         <div class="rating">
                             <ul>
@@ -435,7 +435,7 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Полтава</h4>
+                            <h4>Одесса</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
