--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -179,8 +179,12 @@
                                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-					    <h6>Описание экскурсии: 1 — 3 день (6 — 8 марта)</h6>
-                                        <p>
+					 
+                                         <p>  5 марта (пятница):  в 22.00  выезд из Запорожья на  удобном
+                                           (кондиционер, ТВ) автобусе центр города. Полная информация по сбору, за 3 дня до тура 
+                                           всем кто записался на тур и внес предоплату.</p>
+                                        <p> 
+                                           
                                             Приезжаем раненько в Одессу и СРАЗУ К МОРЮ! Завтрак у моря!
                                             Чтобы наше пребывание в Южной Пальмире осталось ярким и запоминающимся
                                             — мы будем много и «качественно гулять» по Одессе вместе с местными
