--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -184,7 +184,7 @@
                                            (кондиционер, ТВ) автобусе центр города. Полная информация по сбору, за 3 дня до тура 
                                            всем кто записался на тур и внес предоплату.</p>
                                         <p> 
-                                           
+                                           1 — 3 день ( 6 — 8 марта )
                                             Приезжаем раненько в Одессу и СРАЗУ К МОРЮ! Завтрак у моря!
                                             Чтобы наше пребывание в Южной Пальмире осталось ярким и запоминающимся
                                             — мы будем много и «качественно гулять» по Одессе вместе с местными
