--- a/booking.html
+++ b/booking.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот'" />
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Туры выходного дня 'Новый поворот' | Забронируйте Тур">
+    <meta property="og:description" content="Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! "/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/booking.html"/>
+    <meta property="og:image" content="images/novi-povorot.jpg">
+    <!--End Open Graph data-->
 
     <script>
         addEventListener("load", function () {
