--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -180,11 +180,11 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 					 
-                                         <p>  5 марта (пятница):  в 22.00  выезд из Запорожья на  удобном
+                                         <p><strong>  5 марта (пятница):  в 22.00</strong>  выезд из Запорожья на  удобном
                                            (кондиционер, ТВ) автобусе центр города. Полная информация по сбору, за 3 дня до тура 
                                            всем кто записался на тур и внес предоплату.</p>
                                         <p> 
-                                           1 — 3 день ( 6 — 8 марта )
+                                          <strong> 1 — 3 день ( 6 — 8 марта )</strong>
                                             Приезжаем раненько в Одессу и СРАЗУ К МОРЮ! Завтрак у моря!
                                             Чтобы наше пребывание в Южной Пальмире осталось ярким и запоминающимся
                                             — мы будем много и «качественно гулять» по Одессе вместе с местными
@@ -193,7 +193,7 @@
                                             Важно знать, где гулять, с кем гулять, и как гулять!
 					 </p>
 					 <p>
-                                            Автобусно-пешеходные экскурсии: Обзорная, Криминальная Одесса,
+					    <ins>Автобусно-пешеходные экскурсии:</ins> Обзорная, Криминальная Одесса,
                                             Еврейская Одесса, по одесским дворикам, скандалы старой Одессы — это
                                             не просто экскурсии, это захватывающие приключения, погружения в тайну!
                                             Самое уникальное путешествие — 20 000 ЛЬЕ ПОД ЗЕМЛЕЙ - подземный бункер,
@@ -207,7 +207,7 @@
                                             Вы услышите столько рассказов, что «ведром не вычерпать»!!! Самые громкие
                                             местные истории, авантюрные интриги и скандальные авантюры,
                                             тайны одесских двориков и их аборигенов. Вы узнаете все про Одессу и
-                                            даже больше!!!
+                                            даже больше!!!<br>
                                             Жить в центре — самый удобный и оптимальный вариант для комфортных
                                             прогулок и знакомства с городом. Все главные достопримечательности «под
                                             боком» и в любое время можно забежать «домой», чтобы отдохнуть,
@@ -223,8 +223,8 @@
                                             это просто супер!
 					</p>
 					 <p>
-                                            А, ВЫ ЕЩЕ СМОТРИТЕ НА ЭКРАН?! СОБИРАЙТЕСЬ СМОТРЕТЬ ОДЕССУ!
-                                            8 марта — вечерний выезд домой в Запорожье. Будем дома во вторник, 9
+                                            А, ВЫ ЕЩЕ СМОТРИТЕ НА ЭКРАН?! СОБИРАЙТЕСЬ СМОТРЕТЬ ОДЕССУ!<br>
+                                            <strong>8 марта</strong> — вечерний выезд домой в Запорожье. Будем дома во вторник, 9
                                             марта, не позднее 6 утра.
 					</p>
 					<hr>
