--- a/packages.html
+++ b/packages.html
@@ -188,7 +188,7 @@
                                 Лол
                             </a>
                         </h5>
-                        <p class="">Праздник в стиле Лол!</p>
+                        <p class="">Праздник в стиле Лол с любимыми персонажами!</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
@@ -211,7 +211,7 @@
                                 Хортица
                             </a>
                         </h5>
-                        <p class="">Тайны и загадки острова... </p>
+                        <p class="">Тайны и загадки родного острова Хортица... </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
